# cool_compiler

./: .gitignore  1  dune-project  run  type_check
compiler/: .output_cool  .output_dune  builtins.s  dune  dune-project  rem-asm-cmts  run  run-compile  run-full  run-pa4c1  run-test  run-tests  run_size_test  sample  test_input  test_output  zero-char
compiler/benchmarks/: README.txt  cells-40-21.cl  generic.input  hairy-scary-double.cl  if-boolean.cl  list-20.cl  matrix-multiply-5.cl  pi-100.cl  primes-500.cl
compiler/input_testcases/: input_compare.cl  multi_input.cl  simple_addition.cl  simple_io.cl  simple_io_int.cl
compiler/invalid_testcases/: copy_test.cl  elongated_case_branchless.cl  elongated_case_void.cl  elongated_dispatch.cl  elongated_div_by_zero.cl  invalid_case_branchless.cl  invalid_case_void.cl  invalid_div_by_0.cl  invalid_stack_overflow.cl  overriding.cl  self_dispatch.cl
compiler/large_testcases/: base_dervied.cl  biology.cl  game.cl  hs.cl  levels.cl  prints_case_inherits.cl  rosetta.cl
compiler/medium_testcases/: call_mess.cl  case_subtype.cl  copy_reference.cl  mess.cl  new_dispatch.cl  null_dispatch.cl  obj_compare.cl  simple_list.cl  string_manip.cl
compiler/optimization_testcases/: bad_arithmetic.cl  cells-40-21.cl  hairy-scary-double.cl  int-basic-block.cl  int-temporary.cl  list-20.cl  loop-int.cl  matrix-multiply-5.cl  pi-100.cl  pi-2000.cl  pi-500.cl  primes-500.cl
compiler/restricted_testcases/: age_determination.cl  arith_statement.cl  arithmetic.cl  backslash_in_string.cl  basic_arith.cl  block_eval.cl  bool_comparisons.cl  (+23 more)
(+131 files in other folders)
