(lang dune 2.9.3)

(name cool)

(generate_opam_files true)

(source
 (github muoup/cs485_compiler))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name cool)
 (synopsis "Classroom Object-Oriented Language Compiler")
 (description "Compiler middle and backend created for CS485 with Professor Kellogg")
 (depends ocaml)
 (tags
  ("COOL" "compiler backend" "compiler middle end" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
